Convert backend from Java 21/Spring Boot 4 to Java 8/Spring Boot 2.7 (thesis requirement)
- pom.xml: parent 4.1.1 -> 2.7.18, java.version -> 8, renamed
  Boot-4-specific starters (spring-boot-starter-webmvc/-webmvc-test ->
  spring-boot-starter-web/spring-boot-starter-test), pinned Lombok
  annotation-processor version.
- Converted 7 Java records to plain classes (records need Java 16+),
  keeping the same field-name-style accessor methods so call sites
  elsewhere didn't need to change.
- jakarta.* -> javax.* across 14 files (persistence, servlet, mail) -
  Spring Boot 2.7 predates the Jakarta EE namespace rename.
- tools.jackson.* -> com.fasterxml.jackson.* (Jackson 3 -> 2) in 5 files.
- Replaced Map.of/Set.of/List.of (Java 9+) - added util/MapUtil.java and
  util/SetUtil.java so the ~30 call sites didn't need individual rewrites.
- Optional.isEmpty()/String.isBlank() (Java 11) -> !x.isPresent() /
  .trim().isEmpty() across 8 call sites.
- var and pattern-matching instanceof (Java 10/16) -> explicit types
  and traditional casts.
- SecurityConfig.java: PathPatternRequestMatcher (Spring Security 7) ->
  AntPathRequestMatcher (Spring Security 5.7's equivalent).

Verified: compiles clean with -source 8 enforced, compiled .class files
confirmed at bytecode major version 52 (genuine Java 8), and the full
app actually starts and runs correctly under Spring Boot 2.7.18 - JPA/
Hibernate maps every entity, Spring Security's filter chain builds and
enforces auth correctly, connects to the real database, and serves
requests correctly.

Original Java 21/Spring Boot 4 backend preserved on the java21-backend
branch.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>